# cctape

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.github/workflows/: main.yaml
backend/: example_headers.json  pyproject.toml  pyrightconfig.json
backend/src/ccaudit/: api.py  fts.py  main.py  pricing.py  proxy.py  schema.sql  storage.py
backend/src/cctape/: __init__.py  api.py  fts.py  main.py  mcp_caller.py  mcp_server.py  mcp_tools.py  proxy.py  schema.sql  storage.py
backend/src/claude_context/: api.py  main.py  proxy.py  schema.sql  sessions.py  util.py
backend/tests/: test_etag.py  test_mcp_correlation.py  test_mcp_tools.py  test_pricing.py  test_proxy.py  test_sessions.py  test_spa_fallback.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CodeBlock.tsx
frontend/src/components/ui/: tabs.tsx
frontend/src/lib/: EditableTitle.tsx  HeaderSlot.tsx  LiveTimestamp.tsx  api.ts  format.ts  formatCost.ts  headerSlotContext.ts  time.ts  useAutoRefresh.ts  useNow.ts
frontend/src/pages/: Config.tsx  Session.tsx  Sessions.tsx  Settings.tsx  Setup.tsx  Usage.tsx
macos/: .gitignore  README.md  project.yml
macos/CCTapeBar/: AppState.swift  CCTapeBarApp.swift  Info.plist  Models.swift  PopoverView.swift  ProxyClient.swift  ProxyManager.swift  Settings.swift
src/claude_context/: main.py  proxy.py  schema.sql
tests/: sample_request.json  sample_response.txt  test_proxy.py
tools/: browser-frame.html
