[project]
name = "cctape"
version = "0.2.0"
description = "A local proxy for Claude Code that archives every request and response to a SQLite database, with a web UI for browsing sessions, searching transcripts, and inspecting raw API traffic."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    "mcp>=1.9",
    "uvicorn>=0.44.0",
]

[project.scripts]
cctape = "cctape.main:run"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cctape"]
artifacts = ["src/cctape/static/**"]

[tool.hatch.build.targets.sdist]
artifacts = ["src/cctape/static/**"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
]
